htdocs/view.php (bug fix): make "Later" link show up correctly (off-by-one error). skins/default/view.css: "pointer" cursor on {expand,collapse}-bar.

--- a/TODO
+++ b/TODO
@@ -364,3 +364,4 @@
 	Might be worth it: IE doesn't appear to support rounded
   borders, so the left and right padding on Firefox and Safari makes
   it look weird.
+- In item.tpl, put "Read more" in item-footer.
