AUTHORS: added Brian, Arthur Clarke.
TODO: Noted some bugs.

lib/database.inc: explicitly set character set for connection.

lib/config.inc: more comments.

INSTALL: updated instructions somewhat.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,8 @@ Andrew Arensburger: lead programmer.
 
 Thanks to:
 Mike van Wie, for helping me talk through some design problems.
+
+Brian Miller, for pointing me at some weird cases.
+
+Arthur C. Clarke and Stanley Kubrick, for showing a primitive
+newsreader in "2001: A Space Odyssey".
