--- a/TODO
+++ b/TODO
@@ -1,3 +1,30 @@
+- Article with Russian title in Pharyngula. Shows up as ????? in
+  Safari and Firefox. And N810.
+	But only on downspout. Probably an artifact of dumping the
+  database.
+	Looks wrong in Firefox at home. Okay in Safari.
+- bug: when on the last page (earliest items) and use "mark all as
+  read", get blank page.
+- bug: page is displayed in UTF-8, but may contain ISO-8859 articles
+  (e.g., mcoletti's journal). Ought to convert summary/content before
+  displaying. Or preferably when adding to database.
+	Wait. Or is this an artifact of mysqldump | mysql?
+- bug:
+  - View a feed
+  - go back 25 posts ("Earlier")
+  - If there are no feeds, should show a "Later" link, but doesn't.
+- Would be nice to have either "new" flag or a "saved for later" flag.
+  The latter is probably more useful.
+	That way, can go through today's stuff fairly quickly, without
+  having to scroll through messages you've already seen.
+- item.tpl: Show both pub_time and last_update, at least for debugging.
+- Date box in default skin: pretty, but the prettiness doesn't
+  outweigh usefulness. Switch to a more conventional date display.
+  Show year.
+- Limit size of articles (to one N810 screenful?)
+- view.tpl: should have link to index.php
+- feeds.tpl: put one feed per line. More compact, easier N810
+  navigation.
 - (bug?) Bad HTML in item description/content causes parse errors in
   XMLReader. This is going to crop up a lot, and should be fixed.
 	Worst solution: skip the entire feed, making it unusable until
@@ -28,6 +55,7 @@
 	- Don't print trace messages
 	- editfeed.php: return to someplace useful
 	- Makefile: build distro
+	- Remove private values from config.inc
 - Makefile:
 	Run tests:
 		php -l <everything>
@@ -294,9 +322,6 @@
 - When updating all feeds in Ajax mode: if there's an error, display
   an error icon, perhaps with a tooltip with the error. Or make the
   icon a link that'll pop up the error message.
-- Date box in default skin: pretty, but the prettiness doesn't
-  outweigh usefulness. Switch to a more conventional date display.
-  Show year.
 - Should it be possible to mark a feed as inactive, for feeds that are
   only interesting from time to time, like electoral-vote.com?
 - A bunch of elements in the templates have id="..." identifiers
@@ -344,7 +369,6 @@
   marking items as unread.
 	Perhaps do this by adding a hidden "new_state" input field to
   the form (and of course update markitems.php to check for it).
-
 	With JavaScript, we can toggle the state of each item as the
   user requests.
 - Picking which skin to display:
@@ -383,3 +407,15 @@
   feed. But the two are not identical.
 	The feed from <head> is non-conforming: it contains
   nonstandard elements.
+- Combine the two instances of curl initialization code in update.php
+- How should items.pub_time and items.last_update work together?
+	The intent is that if an article is first written on Jan. 1,
+  then updated on Jan. 5, then it'll show up at the top of "today's
+  news" on Jan. 5 (assuming it's still unread).
+	There are several complicating factors:
+	- Some feeds don't include publishing or update times.
+	- Some feeds lie and give the current time for every item.
+	  (examples?)
+- Is it necessary/desirable to
+	set character_set_results='utf8';
+  ?
